--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -145,10 +145,21 @@ Graphics to Implement:
 
 
 Current tasks:
+    - Fix wind cannot knock you off of ledges in the Helix.
+
+    - Allow reflecting fire attack to hurt Rival 2.
+
+    - Add 2x2 map tile frame to tile behaviors that is used when drawing the map
+        - Instead of drawing areas at full scale and then scaling them down for the map, just draw them directly at the final scale.
+
+    - Add support for placing objects/NPCs inside of beds, stasis pods, and tubes.
+
+    - Apply Cocoon tiles in Cocoon.
+        - Add bottom left/right corners to ceiling tiles.
+
     - Add test to remove empty tiles masks applied to empty layers.
         - Delete masks when setting tile to 0/1 to prevent this.
 
-    - Apply Cocoon tiles in Cocoon.
 
     - Add exit cutscene for Jade Champion during Storm Beast.
 
@@ -309,7 +320,6 @@ Current tasks:
     - Remove old graphics
         - Replace remaining old cave graphics.
             - Underwater - Use cave tileset.
-            - Cocoon (Use futuristic+obsidian tiles for now?)
             - River Temple Boss+Underwater - use stone tileset
         - Replace old cave tiles with deleted tiles.
         - Remove all references to the cave tiles, but keep the image itself.
