--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -148,6 +148,9 @@ Current tasks:
     - Add 2x2 map tile frame to tile behaviors that is used when drawing the map
         - Instead of drawing areas at full scale and then scaling them down for the map, just draw them directly at the final scale.
 
+    - Considefer modify rolling balls/pots velocity to match the direction it actually starts moving when hit.
+        - If it is hit DR but only moves R the velocity should be R.
+
     - Add support for placing objects/NPCs inside of beds, stasis pods, and tubes.
 
     - Apply Cocoon tiles in Cocoon.
