--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -145,11 +145,17 @@ Graphics to Implement:
 
 
 Current tasks:
+    - allow setting zone wide behaviors that function as default values for sections.
+        - Create "Zone" + "Section" sections of the behaviors tab
+        - use for corrosiveLogic in Waterfall Tower
+        - use for astralLogic in Dream land
+
     - Add Vanara Dreamland
-        - Implement support for isAstral flag to area sections that force using the Astral Projection instead of the normal Hero.
-            - Set the flag for the entire zone using !$teleportation so that it is removed once the player learns teleportation.
-        - Add entrance to the Vanara Dreamland to the Cocoon after the boss fight.
-            - Spirit world entrances: Fertility Temple, Helix Bridge, Sky City Arcade, Jade City Arcade
+        - Add initial cutscene for meeting the Spirit Tree
+            - Learn Teleportation after talking to the Spirit Tree
+                - In order to teleport MC must learn to manifest their physical body in the Dream World.
+        - Update entrance to Vanara Dreamland from the cocoon to use a sleeping pod you can interact with.
+        - Add Spirit world entrances: Fertility Temple, Helix Bridge, Sky City Arcade, Jade City Arcade
         - Design + Create the Vanara Dreamland
             - NPC Vanara projections populate the dreamland
             - For now use regular grass tiles + vanara plants and then see if using clouds for exterior boundaries gives it a more fantastic feel.
@@ -160,9 +166,6 @@ Current tasks:
                 - One of the crew on the Helix recommends visiting the temple to assist them.
         - Add NPCs to Vanara Dreamland
             - Design NPC dialog
-        - Add initial cutscene for meeting the Spirit Tree
-            - Learn Teleportation after talking to the Spirit Tree
-                - In order to teleport MC must learn to manifest their physical body in the Dream World.
         - Add fade to white transition for entering/leaving dreamland
         - Add Teleportation tutorial to Vanara Dreamland
         - Design+comission avatar for the Spirit Tree
