--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -166,13 +166,18 @@ Current tasks:
                 - One of the crew on the Helix recommends visiting the temple to assist them.
         - Add NPCs to Vanara Dreamland
             - Design NPC dialog
-        - Add fade to white transition for entering/leaving dreamland
         - Add Teleportation tutorial to Vanara Dreamland
         - Design+comission avatar for the Spirit Tree
             - Fully grown Helix exterior in a prominent location of the Dream World
             - Approaching the tree will cause the avatar of the Spirit Tree to appear which looks like some kind of heavenly being?
                 - Work with artist on design details.
         - Add boss rush to Vanara Dreamland
+
+    - Proposal
+        - Require teleportation for fully entering the Spirit World.
+        - Astral projection allows entering the Spirit World as projection only.
+        - Losing all Spirit Energy returns you to the last location you were in the Material World.
+        - This would require modifying Spirit World sections in Cocoon to only require Astral Projection.
 
     - Add new helix exterior graphics
         - Add helix exterior to material sky
