Add new Spirit Tree graphics. Add wall edges to cocoon. Add more checks to make sure area dimensions and sections are always defined.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -149,6 +149,8 @@ Current tasks:
     - Make Vanara bushes linked between worlds like other bushes.
 
     - Add new graphics
+        - AR Device
+        - Cherry tree
         - fireball effect
         - dirt particles
         - tinted Vanara spirit NPCs
