--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -145,6 +145,13 @@ Graphics to Implement:
 
 
 Current tasks:
+    - Fix behavior masking
+        - Umasked pixels should inherit behavior from lower layer.
+        - Masked pixels should inherit behavior from masked layer.
+        - Behaviors of the mask itself (ledges in particular) should apply even if the masked layer is empty.
+        - verify new mask behavior works for water tiles in the forest river.
+        - Spirit world should inherit mask behavior if it inherits the tile from that layer.
+
     - Fix money maze is using mixed wooden/jade tiles
 
     - Jade Champion is stuck on save statue outside of war temple.
