--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -145,9 +145,16 @@ Graphics to Implement:
 
 
 Current tasks:
+    - Prevent movement when ctrl/shift are pressed + editor is open.
+    - Delete all selected objects when pressing delete.
+    - Add underwater forest zone
+    - Update forest zone in spirit world.
+
     - Fix behavior masking
         - Spirit world should inherit mask behavior if it inherits the tile from that layer.
         - Cannot place a mask when selecting a specific layer. Repro: Select floor 2, try to place cave ledge mask.
+
+    - Make deep copies of objects before putting them on clipboard, otherwise edits will apply after copying them.
 
     - Check if player can grab mostly empty tiles after changes to how solid pixel behaviors are stored.
 
